--- a/app/src/main/res/layout/card_vod_item.xml
+++ b/app/src/main/res/layout/card_vod_item.xml
@@ -7,49 +7,80 @@
     <data>
         <variable
             name="vodItem"
-            type="com.bjc.vodsampleapp.data.VodItem" />
-        <variable
-            name="client"
-            type="com.bjc.vodsampleapp.network.ApiNetworkClient" />
+            type="com.bjc.vodsampleapp.data.VodItemWithNames" />
     </data>
 
     <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:id="@+id/vod_card"
+        android:layout_width="400dp"
+        android:layout_height="300dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        app:cardCornerRadius="8dp"
+        app:cardElevation="2dp"
+        app:cardPreventCornerOverlap="false">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
             <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
+                android:id="@+id/card_image"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:scaleType="centerCrop"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"/>
 
             <TextView
                 android:id="@+id/card_title"
                 android:layout_width="0dp"
-                android:layout_height="?attr/listPreferredItemHeight"
+                android:layout_height="?attr/listPreferredItemHeightLarge"
+                android:paddingEnd="8dp"
+                android:paddingStart="8dp"
+                android:gravity="center_vertical"
                 android:text="@{vodItem.title}"
+                android:background="@android:color/white"
+                style="@style/TextAppearance.AppCompat.Title"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@id/card_duration"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 tools:text="Title"/>
 
             <TextView
                 android:id="@+id/card_duration"
-                android:layout_width="0dp"
-                android:layout_height="?attr/listPreferredItemHeight"
+                style="@style/TextAppearance.Compat.Notification.Title.Media"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="8dp"
+                android:layout_marginStart="8dp"
+                android:background="@drawable/time_background"
+                android:elevation="2dp"
+                android:gravity="end|center_vertical"
+                android:paddingBottom="4dp"
+                android:paddingStart="8dp"
+                android:paddingEnd="8dp"
+                android:paddingTop="4dp"
                 android:text="@{vodItem.formatDuration()}"
-                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintBottom_toBottomOf="@id/card_school"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@id/card_title"
-                tools:text="00:00"/>
+                app:layout_constraintTop_toTopOf="@id/card_school"
+                tools:text="00:00" />
 
             <TextView
                 android:id="@+id/card_school"
                 android:layout_width="0dp"
-                android:layout_height="?attr/listPreferredItemHeight"
-                android:text="@{vodItem.getSchoolNames(client).toString()}"
+                android:layout_height="?attr/listPreferredItemHeightSmall"
+                android:paddingEnd="8dp"
+                android:paddingStart="8dp"
+                android:gravity="center_vertical"
+                android:text="@{vodItem.schools}"
+                android:textColor="@android:color/white"
+                android:background="@android:drawable/screen_background_dark_transparent"
+                style="@style/TextAppearance.MaterialComponents.Headline6"
                 app:layout_constraintBottom_toTopOf="@id/card_title"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -59,7 +90,11 @@
                 android:id="@+id/card_sport"
                 android:layout_width="0dp"
                 android:layout_height="?attr/listPreferredItemHeight"
-                android:text="@{vodItem.getSportsNames(client).toString()}"
+                android:paddingEnd="8dp"
+                android:paddingStart="8dp"
+                android:gravity="center_vertical"
+                android:text="@{vodItem.sports}"
+                style="@style/TextAppearance.MaterialComponents.Headline6"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
