--- a/app/src/main/res/layout/fragment_vod_list.xml
+++ b/app/src/main/res/layout/fragment_vod_list.xml
@@ -12,6 +12,9 @@
             android:id="@+id/vod_list"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:paddingEnd="16dp"
+            android:paddingStart="16dp"
+            android:paddingTop="12dp"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             tools:listitem="@layout/card_vod_item"/>
 
