--- a/app/src/main/res/layout/card_vod_item.xml
+++ b/app/src/main/res/layout/card_vod_item.xml
@@ -30,7 +30,17 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:scaleType="centerCrop"
+                android:elevation="-1dp"
                 app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"/>
+
+            <View
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:background="@drawable/gradient_background"
+                app:layout_constraintBottom_toTopOf="@id/card_title"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"/>
@@ -79,7 +89,6 @@
                 android:gravity="center_vertical"
                 android:text="@{vodItem.schools}"
                 android:textColor="@android:color/white"
-                android:background="@android:drawable/screen_background_dark_transparent"
                 style="@style/TextAppearance.MaterialComponents.Headline6"
                 app:layout_constraintBottom_toTopOf="@id/card_title"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -94,6 +103,7 @@
                 android:paddingStart="8dp"
                 android:gravity="center_vertical"
                 android:text="@{vodItem.sports}"
+                android:textColor="@android:color/white"
                 style="@style/TextAppearance.MaterialComponents.Headline6"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
